add_executable(ForceEquilibrium ForceEquilibrium.cpp)
target_link_libraries(ForceEquilibrium LeMonADE CommandlineParser )

add_executable(NetworkWritePartialConnectedNetwork NetworkWritePartialConnectedNetwork.cpp)
target_link_libraries(NetworkWritePartialConnectedNetwork LeMonADE CommandlineParser )

add_executable(TendomerNetworkForceEquilibrium TendomerNetworkForceEquilibrium.cpp)
target_link_libraries(TendomerNetworkForceEquilibrium LeMonADE CommandlineParser )

add_executable(TendomerNetworkExtractActivePart TendomerNetworkExtractActivePart.cpp)
target_link_libraries(TendomerNetworkExtractActivePart LeMonADE CommandlineParser )

add_executable(TendomerNetworkExtractGelPart TendomerNetworkExtractGelPart.cpp)
target_link_libraries(TendomerNetworkExtractGelPart LeMonADE CommandlineParser )

add_executable(TendomerNetworkWritePartialConnectedNetwork TendomerNetworkWritePartialConnectedNetwork.cpp)
target_link_libraries(TendomerNetworkWritePartialConnectedNetwork LeMonADE CommandlineParser )

add_executable(AnalyzeMolecularWeight AnalyzeMolecularWeight.cpp)
target_link_libraries(AnalyzeMolecularWeight LeMonADE )

add_executable(IdealReferenceForceEquilibrium IdealReferenceForceEquilibrium.cpp)
target_link_libraries(IdealReferenceForceEquilibrium LeMonADE )

add_executable(IdealReference2ForceEquilibrium IdealReference2ForceEquilibrium.cpp)
target_link_libraries(IdealReference2ForceEquilibrium LeMonADE )

# add_executable(IntramolecularReactions IntramolecularReactions.cpp)
# target_link_libraries(IntramolecularReactions LeMonADE CommandlineParser )